更新price无法滑动，kyc页面布局异常  错误日志输入

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -767,5 +767,8 @@
   "Download DeGPT APP": "DeGPT-APP herunterladen",
   "More info": "Mehr Informationen",
   "Visit": "Besuchen",
-  "official website": "offizielle Website"
+  "official website": "offizielle Website",
+  "Code":"Code",
+  "Enter email address":"E-Mail-Adresse eingeben",
+  "Enter verification code":"Verifizierungscode eingeben"
 }
