--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -767,5 +767,8 @@
   "Download DeGPT APP": "",
   "More info": "",
   "Visit": "",
-  "official website": ""
+  "official website": "",
+  "Code":"",
+  "Enter email address":"",
+  "Enter verification code":""
 }
