--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -766,5 +766,8 @@
   "Download DeGPT APP": "Télécharger l'application DeGPT",
   "More info": "Plus d'informations",
   "Visit": "Visiter",
-  "official website": "site officiel"
+  "official website": "site officiel",
+  "Code":"Code",
+  "Enter email address":"Entrez l'adresse e-mail",
+  "Enter verification code":"Entrez le code de vérification"
 }
