--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -767,5 +767,8 @@
   "Download DeGPT APP": "Unduh Aplikasi DeGPT",
   "More info": "Informasi Lebih Lanjut",
   "Visit": "Mengunjungi",
-  "official website": "situs web resmi"
+  "official website": "situs web resmi",
+  "Code":"Kode",
+  "Enter email address":"Masukkan alamat email",
+  "Enter verification code":"Masukkan kode verifikasi"
 }
