--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -767,5 +767,8 @@
   "Download DeGPT APP": "DeGPT アプリをダウンロードする",
   "More info": "詳細情報",
   "Visit": "訪問する",
-  "official website": "公式ウェブサイト"
+  "official website": "公式ウェブサイト",
+  "Code":"コード",
+  "Enter email address":"メールアドレスを入力してください",
+  "Enter verification code":"確認コードを入力してください"
 }
