--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -767,5 +767,8 @@
   "Download DeGPT APP": "DeGPT 앱을 다운로드합니다.",
   "More info": "더 많은 정보",
   "Visit": "방문하다",
-  "official website": "공식 웹사이트"
+  "official website": "공식 웹사이트",
+  "Code":"코드",
+  "Enter email address":"이메일 주소를 입력하세요",
+  "Enter verification code":"확인 코드를 입력하세요"
 }
