--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -758,5 +758,8 @@
   "Download DeGPT APP": "Tải xuống ứng dụng DeGPT",
   "More info": "Thêm thông tin",
   "Visit": "Đến thăm",
-  "official website": "trang web chính thức"
+  "official website": "trang web chính thức",
+  "Code":"Mã",
+  "Enter email address":"Nhập địa chỉ email",
+  "Enter verification code":"Nhập mã xác minh"
 }
