--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -767,5 +767,8 @@
   "Download DeGPT APP": "Baixar o aplicativo DeGPT",
   "More info": "Mais informações",
   "Visit": "Visitar",
-  "official website": "site oficial"
+  "official website": "site oficial",
+  "Code":"Código",
+  "Enter email address":"Insira o endereço de e-mail",
+  "Enter verification code":"Insira o código de verificação"
 }
