--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -767,5 +767,8 @@
   "Download DeGPT APP": "DeGPT uygulamasını indirin",
   "More info": "Daha fazla bilgi",
   "Visit": "Ziyaret etmek",
-  "official website": "resmi web sitesi"
+  "official website": "resmi web sitesi",
+  "Code":"Kod",
+  "Enter email address":"E-posta adresini girin",
+  "Enter verification code":"Doğrulama kodunu girin"
 }
