kyc 认证页面优化

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -770,5 +770,8 @@
   "official website": "",
   "Code":"",
   "Enter email address":"",
-  "Enter verification code":""
+  "Enter verification code":"",
+  "Previous": "",
+  "Finish": "",
+  "Next": ""
 }
