--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -669,7 +669,7 @@
   "Wallet Adress": "Dirección de billetera",
   "Your kyc rewards have not been credited.": "Sus recompensas de KYC no han sido acreditadas.",
   "Please use your mobile phone to scan the QR code below for identity verification": "Por favor, use su teléfono móvil para escanear el código QR de abajo para la verificación de identidad.",
-  "Preparing to switch to the face verification page": "Preparándose para cambiar a la página de verificación facial.",
+  "Preparing to switch to the face verification page": "Preparándose para cambiar a la página de verificación facial",
   "QR code is valid for 5 minutes": "El código QR es válido durante 5 minutos.",
   "Region": "Región",
   "Connected to": "Conectado a",
@@ -770,5 +770,8 @@
   "official website": "sitio web oficial",
   "Code":"Código",
   "Enter email address":"Ingrese la dirección de correo electrónico",
-  "Enter verification code":"Ingrese el código de verificación"
+  "Enter verification code":"Ingrese el código de verificación",
+  "Previous": "anterior",
+  "Finish": "terminar",
+  "Next": "siguiente"
 }
