--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -668,7 +668,7 @@
   "Wallet Adress": "Adresse de portefeuille",
   "Your kyc rewards have not been credited.": "Vos récompenses KYC n'ont pas été créditées.",
   "Please use your mobile phone to scan the QR code below for identity verification": "Veuillez utiliser votre téléphone portable pour scanner le code QR ci-dessous pour la vérification d'identité.",
-  "Preparing to switch to the face verification page": "Préparer à passer à la page de vérification faciale.",
+  "Preparing to switch to the face verification page": "Préparer à passer à la page de vérification faciale",
   "QR code is valid for 5 minutes": "Le code QR est valide pendant 5 minutes.",
   "Region": "Région",
   "Connected to": "Connecté à",
@@ -769,5 +769,8 @@
   "official website": "site officiel",
   "Code":"Code",
   "Enter email address":"Entrez l'adresse e-mail",
-  "Enter verification code":"Entrez le code de vérification"
+  "Enter verification code":"Entrez le code de vérification",
+  "Previous": "précédent",
+  "Finish": "terminer",
+  "Next": "suivant"
 }
