--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -669,7 +669,7 @@
   "Wallet Adress": "Alamat Dompet",
   "Your kyc rewards have not been credited.": "Hadiah KYC Anda belum dikreditkan.",
   "Please use your mobile phone to scan the QR code below for identity verification": "Silakan gunakan ponsel Anda untuk menycan kode QR di bawah ini untuk verifikasi identitas.",
-  "Preparing to switch to the face verification page": "Sedang menyiapkan untuk beralih ke halaman verifikasi wajah.",
+  "Preparing to switch to the face verification page": "Sedang menyiapkan untuk beralih ke halaman verifikasi wajah",
   "QR code is valid for 5 minutes": "Kode QR berlaku selama 5 menit.",
   "Region": "Wilayah",
   "Connected to": "Terhubung ke",
@@ -770,5 +770,8 @@
   "official website": "situs web resmi",
   "Code":"Kode",
   "Enter email address":"Masukkan alamat email",
-  "Enter verification code":"Masukkan kode verifikasi"
+  "Enter verification code":"Masukkan kode verifikasi",
+  "Previous": "sebelumnya",
+  "Finish": "selesai",
+  "Next": "berikutnya"
 }
