--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -669,7 +669,7 @@
   "Wallet Adress": "ウォレットアドレス",
   "Your kyc rewards have not been credited.": "あなたの KYC ほうしゅう はまだクレジットされていません。",
   "Please use your mobile phone to scan the QR code below for identity verification": "本人認証のため、下記の QR コードをスマートフォンでスキャンしてください。",
-  "Preparing to switch to the face verification page": "顔認証ページに切り替える準備をしています。",
+  "Preparing to switch to the face verification page": "顔認証ページに切り替える準備をしています",
   "QR code is valid for 5 minutes": "QR コードは 5 分間有効です。",
   "Region": "ちいき",
   "Connected to": "接続先",
@@ -770,5 +770,8 @@
   "official website": "公式ウェブサイト",
   "Code":"コード",
   "Enter email address":"メールアドレスを入力してください",
-  "Enter verification code":"確認コードを入力してください"
+  "Enter verification code":"確認コードを入力してください",
+  "Previous": "前の",
+  "Finish": "終了",
+  "Next": "次の"
 }
