--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -669,7 +669,7 @@
   "Wallet Adress": "Endereço da carteira",
   "Your kyc rewards have not been credited.": "Suas recompensas KYC ainda não foram creditadas.",
   "Please use your mobile phone to scan the Qr code below for identity verification": "Por favor, use seu telefone móvel para escanear o código QR abaixo para a verificação de identidade.",
-  "Preparing to switch to the face verification page": "Preparando-se para mudar para a página de verificação facial.",
+  "Preparing to switch to the face verification page": "Preparando-se para mudar para a página de verificação facial",
   "QR code is valid for 5 minutes": "O código QR é válido por 5 minutos.",
   "Region": "Região",
   "Connected to": "Conectado a",
@@ -770,5 +770,8 @@
   "official website": "site oficial",
   "Code":"Código",
   "Enter email address":"Insira o endereço de e-mail",
-  "Enter verification code":"Insira o código de verificação"
+  "Enter verification code":"Insira o código de verificação",
+  "Previous": "anterior",
+  "Finish": "terminar",
+  "Next": "seguinte"
 }
