--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -654,7 +654,7 @@
   "Obtain in...": "の中で取得する...",
   "Try again": "もう一度試してください",
   "Time expired, try again": "時間が切れました。もう一度試してください",
-  "Your face has been used": "あなたの顔は既に使われています",
+  "You have already bound your face KYC with another wallet. Only one wallet can be bound.": "あなたはすでに別のウォレットに顔認証の KYC をバインドしています。ウォレットは 1 つだけバインドできます。",
   "Your kyc rewards have been credited.": "あなたの KYC 報酬は既に入金されました",
   "The identity validate fail": "本人確認に失敗しました",
   "Your haven't started live testing yet": "あなたはまだライブテストを始めていません",
