--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -654,7 +654,7 @@
   "Obtain in...": "Nhận trong...",
   "Try again": "Coba lagi",
   "Time expired, try again": "Waktu sudah habis, coba lagi",
-  "Your face has been used": "Wajah Anda sudah digunakan",
+  "You have already bound your face KYC with another wallet. Only one wallet can be bound.": "Bạn đã liên kết xác thực khuôn mặt KYC của mình với ví khác rồi. Chỉ có thể liên kết một ví.",
   "Your kyc rewards have been credited.": "Hadiah KYC Anda sudah dikreditkan",
   "The identity validate fail": "Validasi identitas gagal",
   "Your haven't started live testing yet": "Anda belum memulai pengujian langsung",
